Update subtitle in index.html

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <body>
     <div class="container">
         <h1>Überlegungen zur Weiterentwicklung der Beurteilungspraxis</h1>
-        <p class="subtitle">Hochschulkontext: Handlungsoptionen zwischen Öffnung und Wirkmächtigkeit</p>
+        <p class="subtitle">Hochschulkontext: Handlungsoptionen im Bereich einer hochschuldidaktischen Beurteilungskultur</p>
         
         <div class="chart-container">
             <svg viewBox="0 0 1200 750" preserveAspectRatio="xMidYMid meet">
